Makes config file formats consistent

--- a/docs/portus/insecure/db/db.cm.yml
+++ b/docs/portus/insecure/db/db.cm.yml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: portus-db-config
 data:
-  MYSQL_DATABASE: portus 
-  MYSQL_ROOT_PASSWORD: password
+  MYSQL_DATABASE: "portus" 
+  MYSQL_ROOT_PASSWORD: "password"
