Updates the setup to support Docker cli access from outside of the cluster

--- a/docs/portus/insecure/registry/registry.svc.yml
+++ b/docs/portus/insecure/registry/registry.svc.yml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: registry
 spec:
+  type: NodePort
   ports:
     - name: repo
-      port: 5000
+      port: 30521
+      nodePort: 30521
     - name: debug
       port: 5001
   selector:
