--- a/docs/portus/insecure/registry/registry.cm.yml
+++ b/docs/portus/insecure/registry/registry.cm.yml
@@ -3,14 +3,14 @@ kind: ConfigMap
 metadata:
   name: portus-registry-config
 data:
-  REGISTRY_AUTH_TOKEN_REALM: "http://nginx/v2/token"
-  REGISTRY_AUTH_TOKEN_SERVICE: "registry:5000"
+  REGISTRY_AUTH_TOKEN_REALM: "http://nginx:32123/v2/token"
+  REGISTRY_AUTH_TOKEN_SERVICE: "registry:30521"
   REGISTRY_AUTH_TOKEN_ISSUER: "nginx" 
   REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE: "secrets/portus.crt"
 
   REGISTRY_NOTIFICATIONS_ENDPOINTS: >
     - name: nginx 
-      url: http://nginx/v2/webhooks/events
+      url: http://nginx:32123/v2/webhooks/events
       timeout: 2000ms
       threshold: 5
       backoff: 1s
@@ -23,7 +23,7 @@ data:
       delete:
         enabled: true
     http:
-      addr: 0.0.0.0:5000
+      addr: 0.0.0.0:30521
       debug:
         addr: 0.0.0.0:5001
 
