--- a/docs/portus/insecure/nginx/nginx.cm.yml
+++ b/docs/portus/insecure/nginx/nginx.cm.yml
@@ -42,9 +42,9 @@ data:
         server portus:3000 max_fails=3 fail_timeout=15s;
       }
     
-      upstream registry {
+      upstream registry:5000 {
         least_conn;
-        server registry:30521 max_fails=3 fail_timeout=15s;
+        server registry:5000 max_fails=3 fail_timeout=15s;
       }
     
       server {
@@ -103,7 +103,7 @@ data:
           ## See the map directive above where this variable is defined.
           add_header 'Docker-Distribution-Api-Version' $docker_distribution_api_version always;
     
-          proxy_pass http://registry;
+          proxy_pass http://registry:5000;
           proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
