--- a/docs/portus/secure/nginx/nginx.cm.yml
+++ b/docs/portus/secure/nginx/nginx.cm.yml
@@ -48,8 +48,38 @@ data:
       }
 
       server {
-        listen 32123;
-        server_name nginx;
+        listen 443 ssl http2;
+        server_name 172.17.0.1;
+        root /srv/Portus/public;
+
+        ##
+        # SSL
+
+        ssl on;
+
+        # Certificates
+        ssl_certificate /certificates/portus.crt;
+        ssl_certificate_key /certificates/portus.key;
+
+        # Enable session resumption to improve https performance
+        #
+        # http://vincent.bernat.im/en/blog/2011-ssl-session-reuse-rfc5077.html
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
+
+        # Enables server-side protection from BEAST attacks
+        # http://blog.ivanristic.com/2013/09/is-beast-still-a-threat.html
+        ssl_prefer_server_ciphers on;
+
+        # Disable SSLv3 (enabled by default since nginx 0.8.19)
+        # since it's less secure than TLS
+        # http://en.wikipedia.org/wiki/Secure_Sockets_Layer#SSL_3.0
+        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+
+        # Ciphers chosen for forward secrecy and compatibility.
+        #
+        # http://blog.ivanristic.com/2013/08/configuring-apache-nginx-and-openssl-for-forward-secrecy.html
+        ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
 
         ##
         # Docker-specific stuff.
@@ -91,6 +121,9 @@ data:
         # website if it was disabled by the user.
         add_header X-XSS-Protection "1; mode=block";
 
+        # Add header for IE in compatibility mode.
+        add_header X-UA-Compatible "IE=edge";
+
         # Redirect (most) requests to /v2/* to the Docker Registry
         location /v2/ {
           # Do not allow connections from docker 1.5 and earlier
@@ -103,7 +136,8 @@ data:
           ## See the map directive above where this variable is defined.
           add_header 'Docker-Distribution-Api-Version' $docker_distribution_api_version always;
 
-          proxy_pass http://registry:5000;
+          proxy_pass https://registry:5000;
+          proxy_set_header Host $http_host;   # required for docker client's sake
           proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
@@ -113,7 +147,8 @@ data:
 
         # Portus needs to handle /v2/token for authentication
         location = /v2/token {
-          proxy_pass http://portus;
+          proxy_pass https://portus;
+          proxy_set_header Host $http_host;   # required for docker client's sake
           proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
           proxy_set_header X-Forwarded-Proto $scheme;
@@ -123,7 +158,7 @@ data:
 
         # Portus needs to handle /v2/webhooks/events for notifications
         location = /v2/webhooks/events {
-          proxy_pass http://portus;
+          proxy_pass https://portus;
           proxy_set_header Host $http_host;   # required for docker client's sake
           proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -138,7 +173,7 @@ data:
         }
 
         location @portus {
-          proxy_pass http://portus;
+          proxy_pass https://portus;
           proxy_set_header Host $http_host;   # required for docker client's sake
           proxy_set_header X-Real-IP $remote_addr; # pass on real client's IP
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
