--- a/docs/portus/secure/portus/portus.deploy.yml
+++ b/docs/portus/secure/portus/portus.deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: portus-apps
-        image: jbonham/portus-dev:insecure
+        image: opensuse/portus:head
         ports:
         - containerPort: 3000
         env:
@@ -50,6 +50,21 @@ spec:
               configMapKeyRef:
                name: portus-config
                key: RAILS_SERVE_STATIC_FILES
+          - name: PORTUS_PUMA_HOST
+            valueFrom:
+              configMapKeyRef:
+               name: portus-config
+               key: PORTUS_MACHINE_FQDN_VALUE
+          - name: PORTUS_PUMA_TLS_KEY
+            valueFrom:
+              configMapKeyRef:
+               name: portus-config
+               key: PORTUS_KEY_PATH
+          - name: PORTUS_PUMA_TLS_CERT
+            valueFrom:
+              configMapKeyRef:
+               name: portus-config
+               key: PORTUS_CERT_PATH
           - name: PORTUS_PRODUCTION_PASSWORD
             valueFrom:
               secretKeyRef:
