--- a/docs/portus/secure/registry/registry.cm.yml
+++ b/docs/portus/secure/registry/registry.cm.yml
@@ -3,13 +3,15 @@ kind: ConfigMap
 metadata:
   name: portus-registry-config
 data:
-  REGISTRY_AUTH_TOKEN_REALM: "http://nginx:32123/v2/token"
+  REGISTRY_AUTH_TOKEN_REALM: "https://10.17.3.95.nip.io:32123/v2/token"
   REGISTRY_AUTH_TOKEN_SERVICE: "registry:5000"
-  REGISTRY_AUTH_TOKEN_ISSUER: "nginx"
-  REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE: "certificates/portus.crt"
+  REGISTRY_AUTH_TOKEN_ISSUER: "portus.test.lan"
+  REGISTRY_AUTH_TOKEN_ROOTCERTBUNDLE: "/certificates/portus.crt"
+  REGISTRY_HTTP_TLS_CERTIFICATE: "/certificates/portus.crt"
+  REGISTRY_HTTP_TLS_KEY: "/certificates/portus.key"
   REGISTRY_NOTIFICATIONS_ENDPOINTS: >
     - name: nginx
-      url: http://nginx:32123/v2/webhooks/events
+      url: https://nginx/v2/webhooks/events
       timeout: 2000ms
       threshold: 5
       backoff: 1s
