Uncomment out name in portus-deployment metadata label

--- a/contrib/helm-charts/Portus/templates/portus-deployment.yaml
+++ b/contrib/helm-charts/Portus/templates/portus-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: "{{ .Release.Name }}-{{ .Values.portus.name }}" 
   labels:
-    # name: "{{ .Release.Name }}-{{ .Values.portus.name }}"
+    name: "{{ .Release.Name }}-{{ .Values.portus.name }}"
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name }}
