Adds persistent storage to repository deployment in portus helm chart

--- a/contrib/helm-charts/Portus/templates/registry-configmap.yaml
+++ b/contrib/helm-charts/Portus/templates/registry-configmap.yaml
@@ -24,7 +24,7 @@ data:
     version: 0.1
     storage:
       filesystem:
-        rootdirectory: /var/lib/registry
+        rootdirectory: {{ .Values.registry.mountPath }}
       delete:
         enabled: true
     http:
