--- a/contrib/helm-charts/Portus/values.yaml
+++ b/contrib/helm-charts/Portus/values.yaml
@@ -41,6 +41,11 @@ crono:
 ##
 registry:
   name: "registry"
+  mountPath: "/storage"
+  persistence:
+    enabled: true
+    accessMode: "ReadWriteOnce"
+    capacity: "10Gi"
   image: 
     repository: "library/registry"
     tag: "latest" 
@@ -48,7 +53,7 @@ registry:
   replicas: 1
   port: "5000"
   debugPort: "5001"
-    
+
 ## Default values for Nginx. 
 ##
 nginx:
