Adds options to use ingress in Portus chart
Add support for using ingress. Also fix the typo in portus config-
fqdh to fqdn, and the typo in registry config map- ningx to nginx.

--- a/contrib/helm-charts/Portus/templates/nginx-configmap.yaml
+++ b/contrib/helm-charts/Portus/templates/nginx-configmap.yaml
@@ -53,7 +53,7 @@ data:
       }
 
       server {
-        listen {{ .Values.nginx.port }} ssl http2;
+        listen {{ .Values.nginx.service.port }} ssl http2;
         server_name "{{ .Values.nginx.name }}"
         # root /srv/Portus/public;
 
