--- a/contrib/helm-charts/portus/templates/nginx-ingress.yaml
+++ b/contrib/helm-charts/portus/templates/nginx-ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: "{{ .Release.Name }}-{{ .Values.nginx.name }}"
+  name: {{ template "nginx.fullname" . }}
   labels:
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -14,14 +14,14 @@ metadata:
     {{- end }}
 spec:
   rules:
-    - host: {{ .Values.nginx.fqdn | quote }}
+    - host: {{ .Values.nginx.ingress.host | quote }}
       http:
         paths:
           - backend:
-              serviceName: {{ .Values.nginx.name }} 
+              serviceName: {{ .Values.nginx.service.name }} 
               servicePort: {{ .Values.nginx.service.port }}
   tls:
     - secretName: {{ .Values.nginx.ingress.tls.secretName | quote }}
       hosts:
-        - {{ .Values.nginx.fqdn | quote }}
+        - {{ .Values.nginx.ingress.host | quote }}
 {{- end }}
