--- a/contrib/helm-charts/portus/templates/portus-secret.yaml
+++ b/contrib/helm-charts/portus/templates/portus-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"
+  name: {{ template "portus.fullname" . }}
   labels:
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
