--- a/contrib/helm-charts/portus/templates/portus-deployment.yaml
+++ b/contrib/helm-charts/portus/templates/portus-deployment.yaml
@@ -1,58 +1,55 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: "{{ .Release.Name }}-{{ .Values.crono.name }}" 
+  name: {{ template "portus.fullname" . }} 
   labels:
-    name: "{{ .Release.Name }}-{{ .Values.crono.name }}"
+    name: {{ template "portus.fullname" . }}
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  replicas: {{ .Values.crono.replicas }}
+  replicas: {{ .Values.portus.replicas }}
   selector:
     matchLabels:
-      name: "{{ .Release.Name }}-{{ .Values.crono.name }}"
+      name: {{ template "portus.fullname" . }}
   template:
     metadata:
       labels:
-        name: "{{ .Release.Name }}-{{ .Values.crono.name }}"
+        name: {{ template "portus.fullname" . }}
         release: {{ .Release.Name }}
     spec:
       containers:
-        - name: "{{ .Release.Name }}-{{ .Values.crono.name }}" 
-          image: "{{ .Values.crono.image.repository }}:{{ .Values.crono.image.tag }}"
-          imagePullPolicy: {{ .Values.crono.image.pullPolicy }}
+        - name: {{ template "portus.fullname" . }} 
+          image: "{{ .Values.portus.image.repository }}:{{ .Values.portus.image.tag }}"
+          imagePullPolicy: {{ .Values.portus.image.pullPolicy }}
+          ports:
+            - containerPort: {{ .Values.portus.service.port }} 
           env:
-            - name: PORTUS_INIT_COMMAND
-              valueFrom:
-                configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
-                  key: CRONO_INIT_COMMAND 
             - name: PORTUS_MACHINE_FQDN_VALUE
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_MACHINE_FQDN_VALUE
             - name: PORTUS_PASSWORD
               valueFrom:
                 secretKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_PASSWORD
             - name: PORTUS_PRODUCTION_HOST
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_PRODUCTION_HOST
             - name: PORTUS_PRODUCTION_DATABASE
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_PRODUCTION_DATABASE
             - name: PORTUS_PRODUCTION_USERNAME
               valueFrom:
                 configMapKeyRef:
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"
+                  name: {{ template "portus.fullname" . }}
                   key: PORTUS_PRODUCTION_USERNAME
             {{- if .Values.mariadb.enabled }}
             - name: PORTUS_PRODUCTION_PASSWORD
@@ -64,48 +61,63 @@ spec:
             - name: PORTUS_PRODUCTION_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_PRODUCTION_PASSWORD
             {{- end }}
             - name: PORTUS_KEY_PATH
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_KEY_PATH
             - name: PORTUS_CERT_PATH
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_CERT_PATH
             - name: PORTUS_SECRET_KEY_BASE
               valueFrom:
                 secretKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_SECRET_KEY_BASE
             - name: PORTUS_CHECK_SSL_USAGE_ENABLED
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_CHECK_SSL_USAGE_ENABLED
             - name: PORTUS_PUMA_HOST
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_MACHINE_FQDN_VALUE
             - name: PORTUS_PUMA_TLS_KEY
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_KEY_PATH
             - name: PORTUS_PUMA_TLS_CERT
               valueFrom:
                 configMapKeyRef: 
-                  name: "{{ .Release.Name }}-{{ .Values.portus.name }}"  
+                  name: {{ template "portus.fullname" . }}  
                   key: PORTUS_CERT_PATH
+            - name: RAILS_SERVE_STATIC_FILES 
+              valueFrom:
+                configMapKeyRef: 
+                  name: {{ template "portus.fullname" . }}  
+                  key: RAILS_SERVE_STATIC_FILES
+          resources:
+{{ toYaml .Values.portus.resources | indent 12 }}
+          volumeMounts:
+            - name: certvol
+              mountPath: /certificates
+              readOnly: true
+            - name: config
+              mountPath: /srv/Portus/config/config.yml
+              subPath: etc/config.yml
+              readOnly: true
       volumes:
         - name: certvol
           secret:
-            secretName: "{{ .Release.Name }}-{{ .Values.portus.name }}"
+            secretName: {{ template "portus.fullname" . }}
             items:
               - key: key
                 path: portus.key
@@ -113,7 +125,7 @@ spec:
                 path: portus.crt
         - name: config
           configMap:
-            name: "{{ .Release.Name }}-{{ .Values.portus.name }}"
+            name: {{ template "portus.fullname" . }}
             items:
               - key: config
                 path: etc/config.yml
