--- a/contrib/helm-charts/portus/templates/portus-service.yaml
+++ b/contrib/helm-charts/portus/templates/portus-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.portus.name }} 
+  name: {{ .Values.portus.service.name }} 
   labels:
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -9,7 +9,7 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   selector:
-    name: "{{ .Release.Name }}-{{ .Values.portus.name }}"
+    name: {{ template "portus.fullname" . }}
   ports:
-    - name: "{{ .Values.portus.name }}-ui"
-      port: {{ .Values.portus.port }}
+    - name: "{{ .Values.portus.service.name }}"
+      port: {{ .Values.portus.service.port }} 
