--- a/contrib/helm-charts/portus/templates/registry-persistent-volume-claim.yaml
+++ b/contrib/helm-charts/portus/templates/registry-persistent-volume-claim.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ .Release.Name }}-{{ .Values.registry.name }}"
+  name: {{ template "registry.fullname" . }}
   labels:
-    storage: "{{ .Release.Name }}-{{ .Values.registry.name }}"
+    storage: {{ template "registry.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -13,5 +13,5 @@ spec:
     - {{ .Values.registry.persistence.accessMode }}
   resources:
     requests:
-      storage: {{ .Values.registry.persistence.capacity }}
+      storage: {{ .Values.registry.persistence.size }}
 {{- end }}
