--- a/contrib/helm-charts/portus/templates/registry-service.yaml
+++ b/contrib/helm-charts/portus/templates/registry-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.registry.name }} 
+  name: {{ .Values.registry.service.name }} 
   labels:
     app: {{ template "name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -9,9 +9,9 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   selector:
-    name: "{{ .Release.Name }}-{{ .Values.registry.name }}"
+    name: {{ template "registry.fullname" . }}
   ports:
     - name: repo
-      port: {{ .Values.registry.port }} 
+      port: {{ .Values.registry.service.port }} 
     - name: debug
-      port: {{ .Values.registry.debugPort }} 
+      port: {{ .Values.registry.service.debugPort }} 
