Adds NOTES to Portus Helm chart

--- a/contrib/helm-charts/portus/templates/nginx-service.yaml
+++ b/contrib/helm-charts/portus/templates/nginx-service.yaml
@@ -14,6 +14,6 @@ spec:
   ports:
     - name: portus
       port: {{ .Values.nginx.service.port }}
-      {{- if .Values.nginx.service.nodePort }}
+      {{- if and (eq "NodePort" .Values.nginx.service.type) .Values.nginx.service.nodePort }}
       nodePort: {{ .Values.nginx.service.nodePort }}
       {{- end }}
